Correctly injects version string into new native-image